Refactor and expand test cases for `HpscImageServiceTest`, `AwardResponseTest`, and `AwardCeremonyResponseTest` to improve consistency, validation, and coverage for CSV handling, metadata assertions, and response mapping.